problem header layout broken depend on screen size solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,7 @@ hr {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  width: 100%;
 }
 .makePointer {
   cursor: pointer;
@@ -171,7 +172,8 @@ button {
 }
 .navBtn {
   margin: 0 0;
-  width: 300px;
+  min-width: 200px;
+  width: 100%;
   height: 70px;
   padding: 20px 0;
   background: none;
